fix: preserve avatar aspect ratio on mobile
Changed mobile styles to use height: auto instead of fixed 100px
height, preventing the avatar image from being squished.

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -43,11 +43,15 @@
     text-align: center;
     max-width: 480px;
     margin: 10px auto auto;
-    img {
+    .cover-author-image {
       width: 100px;
-      height: 100px;
-      border-radius: 100%;
-      margin-bottom: 10px;
+      height: auto;
+      margin: 0 auto 10px;
+    }
+    img {
+      width: 100%;
+      height: auto;
+      border-radius: 50%;
     }
 }
 
